--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx cypress run --headed --browser chrome --spec 'cypress/integration/*.spec.js'",
-    "test-headless": "npx cypress run --headless --browser chrome --spec 'cypress/integration/*.spec.js'"
+    "test-headless": "npx cypress run --headless --browser chrome --spec 'cypress/integration/*.spec.js'",
+    "cypress-open": "npx cypress open"
   },
   "author": "RV",
   "license": "ISC",
